--- a/buoi-10/aset/css/style.css
+++ b/buoi-10/aset/css/style.css
@@ -24,3 +24,60 @@
   border: 2px solid #00000040;
   
 }
+
+/* lam */
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.full{
+width: 1920px;
+height: 6110px;
+/* background-color: antiquewhite; */
+}
+
+.phan1{
+  width:1920px ;
+  height: 847px;
+  background-color: aqua;
+  padding-top: 14px;
+}
+.header{
+  width: 1320px;
+  height: 113px;
+  background-color: antiquewhite;
+ margin: auto;
+}
+.header .top-header{
+  width: 1320px;
+  height: 59px;
+  display: flex;
+  justify-content: space-between;
+  background-color: stroke;
+}
+/* line */
+.line{
+  width: 1320px;
+  top:59px;
+  border: 1px solid #E3E3E3;
+}
+.logo{
+  display: flex;
+  width: 180px;
+  height: 34px;
+font-size: 11px;
+  left: 570px;
+}
+.menu{
+  width: 1320px;
+  height: 24px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+.menu div{
+  font-size: 16px;
+ 
+  color: #000000;
+}
